# carbonops-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: development.md  evidence-backlog.md  examples.md  parser-contract.md  quickstart.md  reporting-result-contract.md  roadmap.md  source-metadata-model.md  testing.md
docs/codex-runs/: 2026-04-30-cloud-run-02.md  2026-04-30-cloud-run-03.md  2026-04-30-cloud-run-04.md  2026-04-30-cloud-run-05.md  2026-04-30-night-run.md
docs/evaluation/: architecture.md  evaluation-plan.md
docs/evidence/: index.md
docs/knowledge/: base.md
docs/release-notes/: v0.1.0.md  v0.2.0.md
examples/: sample_questions.json
examples/evaluation/: assumptions.json  calculation_readiness.json  context_gaps.json  guardrails.json
src/carbonops_assistant/: __init__.py  cli.py  config.py
src/carbonops_assistant/assistant/: __init__.py  guardrails.py  orchestrator.py  response_contract.py
src/carbonops_assistant/domain/: __init__.py  emissions.py  parser.py  reporting.py  units.py
src/carbonops_assistant/evaluation/: __init__.py  cases.py  diff.py  report.py  runner.py  snapshot.py
tests/: test_cli.py  test_emissions.py  test_evaluation_cases.py  test_evaluation_diff.py  test_evaluation_report.py  test_evaluation_runner.py  test_evaluation_snapshot.py  test_guardrails.py  test_knowledge_documents.py  test_knowledge_search.py  test_orchestrator.py  test_package_baseline.py  test_parser.py  test_reporting.py  test_response_contract.py  test_sample_questions.py  test_units.py
(+3 files in other folders)
