[project]
name = "carbonops-assistant"
version = "0.1.0"
description = "Pre-alpha local foundation for a carbon operations assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
carbonops-assistant = "carbonops_assistant.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
